# roboai-espeak

./: .gitignore  .lex_control_info  ASTRA_UPGRADE_SUMMARY.md  AUDIT_SUMMARY.md  AVSPEECH_INTEGRATION.md  CONFIGURATION_FIX_SUMMARY.md  CONFIG_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  Dockerfile.jetson  FIX_UNITREE_JETSON.md  G1_ARM_INTEGRATION_GUIDE.md  G1_AUTOSTART_GUIDE.md  G1_BADGE_READER_SETUP.md  G1_COMPLETE_SETUP_GUIDE.md  G1_HOTSPOT_GUIDE.md  IMPLEMENTATION_STATUS.md  INSTALL_AND_RUN.md  JETSON_AUDIO_DIAGNOSTICS_SIMPLE.md  JETSON_AUDIO_OUTPUT_FIX.md  JETSON_AUDIO_VALIDATION_SUMMARY.md  JETSON_DEPLOY.md  JETSON_QUICKSTART.md  JETSON_QUICK_FIX.md  JETSON_SETUP.md  LEX_AGENT_STATUS_REPORT.md  LLM_EFFICIENCY_OPTIMIZATION.md  LOCAL_SETUP.md  PROJECT_STRUCTURE.md  QUICKREF.md  QUICKSTART.md  README.md  README_FUNNY_ROBOT.md  README_OLD.md  ROBOSTORE_AI_GUIDE.md  ROBUST_AUTOSTART_GUIDE.md  SPEED_OPTIMIZATION.md  UBUNTU_G1_DEPLOYMENT.md  astra-vein-agent.service  astra_agent.service  (+43 more)
.github/: copilot-instructions.md
config/: README.md  astra_vein2.json5  astra_vein_arm_demo_mac.json5  astra_vein_mac_test.json5  astra_vein_receptionist.json  astra_vein_receptionist.json5  astra_vein_receptionist_arm.json5  badge_reader_test.json5  badge_reader_test_mac.json5  camera_vision_test.json5  cloud_gemini_google.json5  cloud_openrouter_azure.json5  face_greeter.json5  funny_robot.json5  funny_robot_vision.json5  hybrid_cloud_llm_local_audio.json5  hybrid_local_llm_cloud_audio.json5  joker_bot.json5  lex_audio_debug.json5  lex_channel_chief.json5  lex_channel_chief.json5.bak  lex_channel_chief_audio_fix.json5  lex_channel_chief_emotion.json5  lex_channel_chief_jetson_lite.json5  lex_final_working.json5  lex_jetson_working.json5  lex_simple_working.json5  lightweight_face_greeter.json5  local_offline_agent.json5  macos_offline_agent.json5  (+6 more)
(+203 files in other folders)
